<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:weightSum="4"
        tools:context=".ui.donors.DonorsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
        <Button
                android:text="@string/add_donor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPatient"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="1" android:textSize="36sp"
        />
        <Button
                android:text="@string/get_donor_info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getPatientInfo"
                app:layout_constraintTop_toBottomOf="@+id/addPatient" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="1" android:textSize="36sp"/>
        <Button
                android:text="@string/update_donor_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updatePatientInfo"
                app:layout_constraintTop_toBottomOf="@+id/getPatientInfo" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="1" android:textSize="36sp"
        />
    </LinearLayout>
</RelativeLayout>