<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/get_donor_info1"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="30sp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:text="@string/age"
            android:ems="10"
            android:id="@+id/ageText" android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:textSize="24sp"
            android:textAlignment="center"/>
    <TextView
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:text="@string/bloodgroup"
            android:ems="10"
            android:id="@+id/bloodGroupText" android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ageText" android:textSize="24sp"/>
    <TextView
            android:layout_width="217dp"
            android:layout_height="45dp"
            android:text="@string/any_medical_history"
            android:ems="10"
            android:id="@+id/editText7" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/ageText" android:textSize="24sp"/>
    <TextView
            android:text=""
            android:layout_width="163dp"
            android:layout_height="45dp"
            android:id="@+id/nameOfDonor"
            app:layout_constraintStart_toEndOf="@+id/editText2"
            android:layout_marginStart="60dp"
            android:textSize="30sp"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <TextView
            android:text=""
            android:layout_width="163dp"
            android:textSize="30sp"
            android:layout_height="45dp"
            android:id="@+id/owner"
            android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toEndOf="@+id/ageText" android:layout_marginStart="56dp"/>
    <TextView
            android:text=""
            android:layout_width="163dp"
            android:textSize="30sp"
            android:layout_height="45dp"
            android:id="@+id/capacity"
            android:layout_marginTop="184dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toEndOf="@+id/ageText"
            android:layout_marginStart="64dp"/>
    <TextView
            android:text=""
            android:layout_width="163dp"
            android:layout_height="45dp"
            android:textSize="30sp"
            android:id="@+id/medicalHistory"
            android:layout_marginTop="236dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toEndOf="@+id/ageText"
            android:layout_marginStart="160dp"/>
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="332dp"
                                                 app:layout_constraintTop_toBottomOf="@+id/owner"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 android:layout_marginStart="8dp"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 android:layout_marginEnd="8dp"
                                                 app:layout_constraintHorizontal_bias="1.0"
                                                 android:id="@+id/constraintLayout2" android:layout_marginTop="108dp">
        <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/textView4"
                android:textSize="24sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:text="@string/house_no" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" android:id="@+id/editText5"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="73dp"
                android:textSize="30sp"
                android:layout_height="42dp"
                android:inputType="textPersonName"
                android:text=""
                android:id="@+id/houseNo"
                app:layout_constraintStart_toEndOf="@+id/editText5"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/editText5"/>
        <TextView
                android:layout_width="132dp"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:text="@string/street_locality"
                android:id="@+id/editText20"
                android:layout_marginStart="10dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editText5"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/city" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:layout_marginTop="88dp"
                app:layout_constraintTop_toBottomOf="@+id/editText5" android:id="@+id/editText21"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="73dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/editText21"
                app:layout_constraintTop_toTopOf="@+id/editText21"
                android:layout_marginStart="8dp"
                android:id="@+id/city"/>
        <TextView
                android:layout_width="73dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:text=""
                android:id="@+id/street_locality"
                app:layout_constraintStart_toEndOf="@+id/editText20"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/editText20"/>
        <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/state"
                app:layout_constraintStart_toEndOf="@+id/city" android:layout_marginStart="24dp"
                android:id="@+id/editText23"
                app:layout_constraintTop_toTopOf="@+id/city" android:textSize="18sp"/>
        <TextView
                android:layout_width="73dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/editText23"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/editText23"
                android:id="@+id/state"/>
        <TextView
                android:layout_width="83dp"
                android:layout_height="32dp"
                android:inputType="textPersonName"
                android:text="@string/pin_code" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/editText21" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" android:id="@+id/editText24" android:textSize="18sp"/>
        <TextView
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintTop_toTopOf="@+id/editText24" app:layout_constraintStart_toEndOf="@+id/editText24"
                android:id="@+id/pinCode"/>
        <TextView
                android:layout_width="71dp"
                android:layout_height="29dp"
                android:inputType="textPersonName"
                android:text="Contact Number" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/editText23"
                app:layout_constraintStart_toEndOf="@+id/pinCode" android:layout_marginStart="20dp"
                android:id="@+id/editText27" android:textSize="18sp"/>
        <TextView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:id="@+id/contactNo"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/editText27"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/editText27"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/give_id"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText" android:textSize="24sp"/>
    <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            android:ems="10"
            android:id="@+id/patientId"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="48dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/get_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getDetails" app:layout_constraintStart_toEndOf="@+id/patientId"
            android:layout_marginStart="44dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
</android.support.constraint.ConstraintLayout>